--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="%PUBLIC_URL%/icon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="Bosmans and Beyond" content="TO DO" />
-		<title>React App</title>
+		<meta name="Bosmans & Beyond" content="TO DO" />
+		<title>Bosmans & Beyond</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
