fix: WIP: contact page & form - captcha div fix

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 			<input type="text" name="name" />
 			<input type="email" name="email" />
 			<textarea name="message"></textarea>
-			<div data-netlify-recaptcha="true" />
+			<div data-netlify-recaptcha="true"></div>
 		</form>
 		<div id="root"></div>
 		<div id="portal"></div>
